2011-08-22 Roman
- UI.QTCfg: Force "StyledPanel" border enable for Text and Table widgets for user's resize allow.


2011-08-21 Roman
- FIX:DAQ.Template: Remove template function's doubled IO, on the template enable, is added.
- FIX:DAQ: Check archives to attribute's address for prevent doubled for values archives is added.


2011-08-18 Roman
- FIX:UI.Vision: Mouse release event pass on run for primitive "ElFigure" is fixed.
- FIX:SYS.DAQ: Messages creation is added for compile errors for user API function funcCall();
- FIX:UI.VCAEngine: No project's page attributes "pgOpen" and "pgNoOpenProc" restore after reenable is fixed.
    Only project's pages and Widgets of libraries include to list for a parent widget select.
- FIX:UI.Vision, UI.WebVision: Minimum for "Diagram" primitive's time size is set to 1ms.


2011-08-17 Roman
- XMLNode: Prevent new line doubled on save node by XMLNode::BrOpenPrev.
- UI.VCAEngine, UI.Vision: To primitive "ElFigure" for modes "Line and Text edit" new attribute "confirm" is added for
    confirm on edit disabling allow.


2011-08-16 Roman
- SYS: User's API object XMLNodeObj is fixed for prevent self node include by childAdd() or childIns().
    Return empty string is made for XMLNodeObj::attr().
- UI.Vision: Create runtime context menu for widgets is set to event QEvent::MouseButtonRelease for prevent incidentally one click
    menu items call.


2011-08-13 Roman
- UI.QTCfg: Full text edit is added into table cells edit.
- FIX:UI.Vision: Deranged widgets level operations is fixed.


2011-08-12 Roman
- FIX:UI.QTCfg: Start periodic update icon is fixed.
- UI.VCAEngine: For attribute "text" of primitive "Text" context help is added.
- UI.Vision: The background for developed widget window is set to QT::Dense7Pattern.
    Processing events filter from scrolled area of developed widget window is added.
    Wait for double click, into development, is set only for editable widgets.


2011-08-10 Roman